# ME

./: README.md  TDDFA.py  config.yaml  container.py  dataProcess.py  model.py  someScript.py  test.py  train.py
FaceBoxes/: FaceBoxes.py  FaceBoxes_ONNX.py
FaceBoxes/utils/: box_utils.py  nms_wrapper.py
ak/: README.md  example.py  mutilAK_calibration.py  pykinect_azure.rar  pyproject.toml
ak/camera_synchronous/: __init__.py  core_processing.py  core_threading.py
ak/camera_synchronous/examples/: demo.py
ak/camera_synchronous/utils/: fake.py  utils.py
ak/tests/: test_core.py
bfm/: bfm.py
dataset/: CK+_10fold_samples.txt
utils/: functions.py  pose.py  serialization.py  uv.py
